[gd_scene load_steps=31 format=3 uid="uid://bj5xm3ygm2bw3"]

[ext_resource type="PackedScene" uid="uid://dvbpkfbcjyfhy" path="res://Scenes/player.tscn" id="1_a02cp"]
[ext_resource type="Script" uid="uid://cl4ppvto10j64" path="res://Scripts/world.gd" id="1_ikia7"]
[ext_resource type="AudioStream" uid="uid://42vaoa6tub2j" path="res://Assets/Sounds/SacrificeAdventure_FULL_SONG_MusicGPT.mp3" id="2_7yui6"]
[ext_resource type="Script" uid="uid://bcct7y7x74b0n" path="res://Scripts/camera.gd" id="3_5a7ea"]
[ext_resource type="Script" uid="uid://d4f75v6o4ipd8" path="res://Scripts/skill_ui.gd" id="4_k7acu"]
[ext_resource type="Texture2D" uid="uid://bg85yts8svqx" path="res://Assets/Sprites/enemies/high leap.png" id="4_o06y3"]
[ext_resource type="Texture2D" uid="uid://c4p4fop5by3t2" path="res://Assets/Sprites/enemies/shadow_step.png" id="5_k7acu"]
[ext_resource type="PackedScene" uid="uid://cj1dk73jftq84" path="res://Scenes/newmap2.tscn" id="5_t2t4p"]
[ext_resource type="Texture2D" uid="uid://wbvcm2ktibck" path="res://Assets/Sprites/enemies/fade.png" id="6_5v1tr"]
[ext_resource type="Texture2D" uid="uid://wqixurj5uai5" path="res://Assets/Sprites/enemies/slash.png" id="6_k7acu"]
[ext_resource type="FontFile" uid="uid://dnnfaywe1qdr5" path="res://PixelifySans-VariableFont_wght.ttf" id="10_0fj1v"]
[ext_resource type="Script" uid="uid://dwevmyss2qvjo" path="res://Scripts/main_menu.gd" id="13_axeuq"]
[ext_resource type="Texture2D" uid="uid://b5tj0h51utb0l" path="res://Assets/Sprites/image.png" id="13_kn0ld"]
[ext_resource type="FontFile" uid="uid://pwwatf6xnjje" path="res://BoldPixels.ttf" id="14_hgpy0"]
[ext_resource type="FontFile" uid="uid://dwwtn57dghkmg" path="res://BoldPixels.otf" id="15_t2t4p"]
[ext_resource type="Shader" uid="uid://rcpoj4ygjmwu" path="res://Assets/Shaders/film_grain.gdshader" id="16_hgpy0"]
[ext_resource type="Shader" uid="uid://b3jnx5o0y68py" path="res://Assets/Shaders/vignete.gdshader" id="16_t2t4p"]
[ext_resource type="Shader" uid="uid://rsu6gvu83w23" path="res://Assets/Shaders/crt.gdshader" id="18_0pcbe"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_t2t4p"]
lifetime_randomness = 1.0
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(320, 180, 1)
gravity = Vector3(0, 3, 0)
turbulence_enabled = true
turbulence_influence_min = 0.020000001
turbulence_influence_max = 0.020000001

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_257up"]
texture = ExtResource("13_kn0ld")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_axeuq"]
content_margin_top = 100.0
content_margin_bottom = 100.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1cojt"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_axeuq"]
content_margin_top = 10.0
content_margin_bottom = 10.0
bg_color = Color(0, 0, 0, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0pcbe"]
shader = ExtResource("16_t2t4p")
shader_parameter/radius = 0.800000038
shader_parameter/softness = 0.38
shader_parameter/intensity = 2.0
shader_parameter/contrast = 2.2
shader_parameter/vignette_color = Color(0, 0, 0, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_t2t4p"]
shader = ExtResource("16_hgpy0")
shader_parameter/grain_amount = 0.05
shader_parameter/grain_size = 1.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_axeuq"]
shader = ExtResource("18_0pcbe")
shader_parameter/scanline_strength = 1.0
shader_parameter/curvature_amount = 0.010000000475
shader_parameter/bloom_strength = 0.2
shader_parameter/chromatic_offset = 0.004
shader_parameter/noise_strength = 0.010000000475
shader_parameter/vignette_strength = 0.50000002375

[sub_resource type="Environment" id="Environment_hgpy0"]
background_mode = 3
glow_enabled = true
glow_normalized = true

[sub_resource type="Animation" id="Animation_t2t4p"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UI/MainMenu/Win/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("UI/MainMenu/Win/Label:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("UI/MainMenu/Win/Label:text")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Congratulations and Thank you for playing this Game Demo!"]
}

[sub_resource type="Animation" id="Animation_hgpy0"]
resource_name = "win"
length = 10.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UI/MainMenu:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("UI/MainMenu/Win/ColorRect:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.56666666, 1.1, 1.8, 4.8, 6.1000004, 6.4333334, 6.9666667, 9.333334, 10),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1), Color(0, 0, 0, 1), Color(0, 0, 0, 0), Color(0, 0, 0, 0), Color(0, 0, 0, 1), Color(0, 0, 0, 1), Color(0, 0, 0, 0), Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("UI/MainMenu/Win/Label:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.66),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("UI/MainMenu/Win/Label:text")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.66, 6.28),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": ["Congratulations and Thank you for playing this Game Demo!", "A Short Game by Kairo"]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("UI/MainMenu/Win:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("UI/MainMenu/MainMenu:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_t2t4p"]
_data = {
&"RESET": SubResource("Animation_t2t4p"),
&"win": SubResource("Animation_hgpy0")
}

[node name="World" type="Node"]
script = ExtResource("1_ikia7")
MUSIC = ExtResource("2_7yui6")

[node name="GameWorld" type="SubViewportContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true
stretch_shrink = 6

[node name="SubViewport" type="SubViewport" parent="GameWorld"]
handle_input_locally = false
snap_2d_transforms_to_pixel = true
size = Vector2i(320, 180)
render_target_update_mode = 4

[node name="Player" type="Node2D" parent="GameWorld/SubViewport"]

[node name="Player" parent="GameWorld/SubViewport/Player" instance=ExtResource("1_a02cp")]
position = Vector2(66.833336, -38.333332)
GRAVITY = 19.5

[node name="Camera2D2" type="Camera2D" parent="GameWorld/SubViewport/Player/Player"]
position = Vector2(-0.00033569336, 0.00033187866)
process_callback = 0
limit_enabled = false
limit_smoothed = true
position_smoothing_enabled = true
script = ExtResource("3_5a7ea")

[node name="GPUParticles2D2" type="GPUParticles2D" parent="GameWorld/SubViewport/Player/Player/Camera2D2"]
z_index = 2
amount = 200
lifetime = 10.0
process_material = SubResource("ParticleProcessMaterial_t2t4p")

[node name="Scenes" type="Node2D" parent="GameWorld/SubViewport"]

[node name="newmap" parent="GameWorld/SubViewport/Scenes" instance=ExtResource("5_t2t4p")]

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HUD" type="CanvasLayer" parent="UI"]

[node name="Main" type="Control" parent="UI/HUD"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="UI/HUD/Main"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 150
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 150
theme_override_constants/margin_bottom = 100

[node name="Control" type="Control" parent="UI/HUD/Main/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/HUD/Main/MarginContainer/Control"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -40.0
grow_horizontal = 0
grow_vertical = 0

[node name="SkillUI" type="HBoxContainer" parent="UI/HUD/Main/MarginContainer/Control/VBoxContainer"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1
script = ExtResource("4_k7acu")

[node name="ShadowStep" type="TextureButton" parent="UI/HUD/Main/MarginContainer/Control/VBoxContainer/SkillUI"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
texture_normal = ExtResource("5_k7acu")
stretch_mode = 0

[node name="TextureRect" type="TextureRect" parent="UI/HUD/Main/MarginContainer/Control/VBoxContainer/SkillUI/ShadowStep"]
custom_minimum_size = Vector2(240, 240)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_k7acu")
expand_mode = 1

[node name="HighLeap" type="TextureButton" parent="UI/HUD/Main/MarginContainer/Control/VBoxContainer/SkillUI"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
texture_normal = ExtResource("4_o06y3")
stretch_mode = 0

[node name="TextureRect2" type="TextureRect" parent="UI/HUD/Main/MarginContainer/Control/VBoxContainer/SkillUI/HighLeap"]
custom_minimum_size = Vector2(240, 240)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_k7acu")
expand_mode = 1

[node name="Fade" type="TextureButton" parent="UI/HUD/Main/MarginContainer/Control/VBoxContainer/SkillUI"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
texture_normal = ExtResource("6_5v1tr")
stretch_mode = 0

[node name="TextureRect3" type="TextureRect" parent="UI/HUD/Main/MarginContainer/Control/VBoxContainer/SkillUI/Fade"]
custom_minimum_size = Vector2(240, 240)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_k7acu")
expand_mode = 1

[node name="Label" type="Label" parent="UI/HUD/Main/MarginContainer/Control/VBoxContainer"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
theme_override_fonts/font = ExtResource("10_0fj1v")
theme_override_font_sizes/font_size = 42
text = "Press D to Dash"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Timer" type="Control" parent="UI/HUD/Main/MarginContainer"]
layout_mode = 2

[node name="Timer" type="Timer" parent="UI/HUD/Main/MarginContainer/Timer"]
process_callback = 0

[node name="TimerContainer" type="HBoxContainer" parent="UI/HUD/Main/MarginContainer/Timer"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
theme_override_constants/separation = 1200
alignment = 1

[node name="TimerLabel" type="Label" parent="UI/HUD/Main/MarginContainer/Timer/TimerContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("10_0fj1v")
theme_override_font_sizes/font_size = 52
text = "Time : "

[node name="MainMenu" type="CanvasLayer" parent="UI"]
script = ExtResource("13_axeuq")

[node name="MainMenu" type="Control" parent="UI/MainMenu"]
z_index = 7
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="UI/MainMenu/MainMenu"]
modulate = Color(0.42658037, 0.07888464, 0.24988157, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_257up")

[node name="VBoxContainer" type="VBoxContainer" parent="UI/MainMenu/MainMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 200

[node name="Label" type="Label" parent="UI/MainMenu/MainMenu/VBoxContainer"]
modulate = Color(0.9427856, 0.93508667, 0.68839294, 1)
layout_mode = 2
theme_override_fonts/font = ExtResource("15_t2t4p")
theme_override_font_sizes/font_size = 100
theme_override_styles/normal = SubResource("StyleBoxEmpty_axeuq")
text = "The Cursed Adventure"
horizontal_alignment = 1
vertical_alignment = 2

[node name="MarginContainer" type="MarginContainer" parent="UI/MainMenu/MainMenu/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 600
theme_override_constants/margin_right = 600

[node name="VBoxContainer2" type="VBoxContainer" parent="UI/MainMenu/MainMenu/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="NameInput" type="LineEdit" parent="UI/MainMenu/MainMenu/VBoxContainer/MarginContainer/VBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("14_hgpy0")
theme_override_font_sizes/font_size = 45
theme_override_styles/normal = SubResource("StyleBoxFlat_1cojt")
placeholder_text = "Enter Your Name"
alignment = 1
max_length = 8

[node name="StartGame" type="Button" parent="UI/MainMenu/MainMenu/VBoxContainer/MarginContainer/VBoxContainer2"]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("14_hgpy0")
theme_override_font_sizes/font_size = 45
theme_override_styles/normal = SubResource("StyleBoxFlat_axeuq")
text = "Start Game"

[node name="LeaderBoard" type="Button" parent="UI/MainMenu/MainMenu/VBoxContainer/MarginContainer/VBoxContainer2"]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("14_hgpy0")
theme_override_font_sizes/font_size = 45
theme_override_styles/normal = SubResource("StyleBoxFlat_axeuq")
text = "Hall Of Fame"

[node name="QuitGame" type="Button" parent="UI/MainMenu/MainMenu/VBoxContainer/MarginContainer/VBoxContainer2"]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("14_hgpy0")
theme_override_font_sizes/font_size = 45
theme_override_styles/normal = SubResource("StyleBoxFlat_axeuq")
text = "Quit Game"

[node name="Win" type="Control" parent="UI/MainMenu"]
visible = false
z_index = 7
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="UI/MainMenu/Win"]
modulate = Color(0.23919538, 0.00013890535, 0.7796391, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_257up")

[node name="Label" type="Label" parent="UI/MainMenu/Win"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.90597916, 0.9523029, 0.9999998, 1)
theme_override_fonts/font = ExtResource("15_t2t4p")
theme_override_font_sizes/font_size = 101
text = "Congratulations and Thank you for playing this Game Demo!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="ColorRect" type="ColorRect" parent="UI/MainMenu/Win"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="PostProcessing" type="Control" parent="UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="Vigneete" type="ColorRect" parent="UI/PostProcessing"]
z_index = 10
material = SubResource("ShaderMaterial_0pcbe")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="FilmGrain" type="ColorRect" parent="UI/PostProcessing"]
visible = false
z_index = 10
material = SubResource("ShaderMaterial_t2t4p")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="CRT" type="ColorRect" parent="UI/PostProcessing"]
z_index = 11
material = SubResource("ShaderMaterial_axeuq")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_hgpy0")

[node name="WinAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_t2t4p")
}

[connection signal="timeout" from="UI/HUD/Main/MarginContainer/Timer/Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="UI/MainMenu/MainMenu/VBoxContainer/MarginContainer/VBoxContainer2/StartGame" to="UI/MainMenu" method="_on_start_game_pressed"]
[connection signal="pressed" from="UI/MainMenu/MainMenu/VBoxContainer/MarginContainer/VBoxContainer2/LeaderBoard" to="UI/MainMenu" method="_on_leader_board_pressed"]
[connection signal="pressed" from="UI/MainMenu/MainMenu/VBoxContainer/MarginContainer/VBoxContainer2/QuitGame" to="UI/MainMenu" method="_on_quit_game_pressed"]
